freebsd-buildutils (10.0~svn259404-4) UNRELEASED; urgency=low

  * Correctly setup BSD version of MAKEFLAGS to support parallel builds.
  * Install make and mtree by their upstream names (fmake and fmtree).
    Remove the legacy symlinks (leave them to freebsd-glue).

 -- Robert Millan <rmh@debian.org>  Sun, 29 Dec 2013 20:38:18 +0100

freebsd-buildutils (10.0~svn259404-3) unstable; urgency=low

  * Fix aicasm install path.

 -- Robert Millan <rmh@debian.org>  Wed, 18 Dec 2013 12:15:59 +0100

freebsd-buildutils (10.0~svn259404-2) unstable; urgency=low

  * kldxref is kFreeBSD-only.

 -- Robert Millan <rmh@debian.org>  Tue, 17 Dec 2013 23:34:15 +0100

freebsd-buildutils (10.0~svn259404-1) unstable; urgency=low

  * New upstream snapshot (10.0-RC2).
    - Switch to releng/10.0 branch.
    - Add kldxref.

  [ Robert Millan ]
  * Fetch source code securely (https) in get-orig-source.

 -- Robert Millan <rmh@debian.org>  Tue, 17 Dec 2013 22:28:15 +0100

freebsd-buildutils (10~svn258496-1) unstable; urgency=low

  * New upstream snapshot.
    - Refresh all patches.
    - Add aicasm. It is now required by kernel builds.

  [ Guillem Jover ]
  * Remove myself from Uploaders.

 -- Robert Millan <rmh@debian.org>  Sat, 23 Nov 2013 15:48:42 +0100

freebsd-buildutils (10~svn253832-1) unstable; urgency=low

  * New upstream snapshot (provides MK_USB_GADGET_EXAMPLES).

 -- Robert Millan <rmh@debian.org>  Fri, 02 Aug 2013 21:04:11 +0200

freebsd-buildutils (10~svn251967-6) unstable; urgency=low

  * Bump freebsd-glue B-D to fix FTBFS.

 -- Robert Millan <rmh@debian.org>  Mon, 22 Jul 2013 21:57:31 +0200

freebsd-buildutils (10~svn251967-5) unstable; urgency=low

  * Reupload.

 -- Robert Millan <rmh@debian.org>  Mon, 22 Jul 2013 20:10:42 +0200

freebsd-buildutils (10~svn251967-4) experimental; urgency=low

  * Bring back MK_NCP (needed by kfreebsd-9).

 -- Robert Millan <rmh@debian.org>  Sat, 06 Jul 2013 22:49:13 +0200

freebsd-buildutils (10~svn251967-3) experimental; urgency=low
